* tools/bitmap_converter.py:  This script converts from any image type
  supported by Python imaging library to the RLE-encoded format used by
  NxWidgets.
* NxWidgets/nxwm/src/capplicationwindow.cxx: If the "desktop" is empty,
  users have no need to minimize any windows. If the buttons are small,
  it's easy to hit minimize button accidentally when trying to close an
  application.  Contributed by Petteri Aimonen.
* NxWidgets/nxwm/src/ctaskbar.cxx:  Add an option to eliminate the
  background image.  Contributed by Petteri Aimonen.
* NxWidgets/nxwm/src/chexcalculator.cxx and NxWidgets/nxwm/src/cstartwindow.cxx:
  The config settings CONFIG_NXWM_STARTWINDOW_ICON and CONFIG_NXWM_HEXCALCULATOR_ICON
  allow changing the icons used for these applications. However, to declare symbols
  for these icons user would need to modify NxWidgets header files.
  This commit adds a simple forward declaration to the relevant files, based on the
  configured icon. If the icon does not exist, linker will give an error about it.
  Contributed by Petteri Aimonen.
* NxWidgets::CTaskBar: Highlight the current window in the task bar.
  Contributed by Petteri Aimonen.
* NxWidgets/libnxwidgets/src/glyph_cycle.cxx:  Width of glyph_cycle was wrong;
  Destructor needs to by public.  From Petteri Aimonen.
* NxWidgets::CNumericEdit.  This is basically a label with plus and minus buttons.
  Contributed by Petteri, Aimonen.
* NxWM::CStartWindow:  Fix mq_receive error handling with signal is recieved.
  From Petteri Aimonen.
* NxWidgets:CNxTimer:  Replace the original (apparently non-functional) signal-
  based solution with a work queue-based solution.  This raises some isses about
  using the internal work queues from user space.  I have decided to implemented
  user-space work queues (someday) in order to accomplish that functionaliy.
  Submitted by Petteri Aimonen.
* NxWidgets:CText and NxWidgets:CNumericEdite:  Fix some memory freeing bugs
  (from Petteri Aimonen).
  